    "sender".

    Corrected a bug in the compilation of explicit-qualified calls to module
    meta-predicates where the module qualification would be dropped from the
    compiled call. Note that these calls will use Logtalk meta-predicate
    semantics (i.e. the meta-arguments will be called in the context of the
    caller) instead of the usual Prolog module meta-predicate semantics.

    Changed the semantics of the coinductive/1 directive to use the same
    semantics as the coinductive1/1 directive found on the U.T.Dallas
    coinduction implementation. Thanks to Feliks Kluzniak for the examples
    that helped clarified the issues with the previous implementation.

    Refined error checking for the built-in predicates category_property/2,
    object_property/2, and protocol_property/2, throwing a type_error/2 when
    the second argument is neither a variable or a callable term. Added an
    info/1 entity property.

    When compiling a module as an object, warn instead of throwing an error
    when compiling a call to a built-in predicate used as a query.

    Attempting to load a settings file containing syntax errors will now
    print a warning instead of failing silently.

    Allow using a Prolog module as an hook object. The module must be loaded
    and its identifier must be different from any object identifier.

    Changed reporting of declared but not defined static predicates to exclude
    multifile predicates.

    Fixed a compilation performance issue with objects and categories
    containing a large number of clauses for the same predicate.

    Improved portability of calls from within objects and categories of calls
    to Prolog database and reflection built-in predicates whenever the first
    argument is an explicit module-qualified term.

    Turning on the "smart_compilation" compiler flag will now automatically
    switch off the "clean" flag.

    Reimplemented the reflection built-in methods predicate_property/2,